@@ -1,3 +1,10 @@
+2007-02-09  Arno Rehn  <arno@arnorehn.de>
+
+	* When a qApp instance was destroyed, it would automatically destroy all
+	  other Qt objects, in some cases our own destructor calls could interfere
+	  with this mechanism. Fixed by checking if qApp == 0 and if so skipping
+	  the destructor calls.
+
 2007-02-09  Richard Dale  <rdale@foton.es>
 
 	* Renamed CreateStrongReference() as IsInstanceContained()
